# miniblogs/src/main/java/com/HUCE/miniblogs/api/NewController.java
@@ -3,23 +3,29 @@ package com.HUCE.miniblogs.api;
 import com.HUCE.miniblogs.model.ModelNew;
 import com.HUCE.miniblogs.model.NewReq;
 import com.HUCE.miniblogs.model.News;
+import com.HUCE.miniblogs.search.HibernateSearchUtil;
 import com.HUCE.miniblogs.service.NewService;
+import com.HUCE.miniblogs.validator.NewSearchValidator;
 import com.HUCE.miniblogs.validator.NewValidator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import javax.validation.constraints.NotNull;
+
 
 @RestController
 @CrossOrigin
 @RequestMapping("/api")
-public class NewController implements NewApi{
+public class NewController implements NewApi,NewsApi {
 
     @Autowired
     NewService newService;
     @Autowired
     NewValidator newValidator;
+    @Autowired
+    NewSearchValidator newSearchValidator;
 
     @Override
     public ResponseEntity<ModelNew> addnew(String apikey, NewReq request) {
@@ -41,4 +47,11 @@ public class NewController implements NewApi{
         return new ResponseEntity<>(modelNew,HttpStatus.OK);
     }
 
+    @Override
+    public ResponseEntity<News> search(String apikey, @NotNull String searchNew) {
+        searchNew = HibernateSearchUtil.decodeUrl(searchNew);
+        newSearchValidator.validateTermSearch(searchNew);
+        News news = newService.search(searchNew);
+        return new ResponseEntity<>(news,HttpStatus.OK);
+    }
 }
